; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfileconfig_file.c_config_get_array.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfileconfig_file.c_config_get_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_entry_list = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @config_get_array(i32* %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.config_entry_list*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call %struct.config_entry_list* @config_get_entry(i32* %11, i8* %12, i32* null)
  store %struct.config_entry_list* %13, %struct.config_entry_list** %10, align 8
  %14 = load %struct.config_entry_list*, %struct.config_entry_list** %10, align 8
  %15 = icmp ne %struct.config_entry_list* %14, null
  br i1 %15, label %16, label %26

16:                                               ; preds = %4
  %17 = load i8*, i8** %8, align 8
  %18 = load %struct.config_entry_list*, %struct.config_entry_list** %10, align 8
  %19 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i64, i64* %9, align 8
  %22 = call i64 @strlcpy(i8* %17, i32 %20, i64 %21)
  %23 = load i64, i64* %9, align 8
  %24 = icmp ult i64 %22, %23
  %25 = zext i1 %24 to i32
  store i32 %25, i32* %5, align 4
  br label %27

26:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %27

27:                                               ; preds = %26, %16
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local %struct.config_entry_list* @config_get_entry(i32*, i8*, i32*) #1

declare dso_local i64 @strlcpy(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
